--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://postgres:123456@localhost:5432/englishsmart?schema=public"
-DATABASE_URL="postgres://englishsmartsys_user:HZJT0XOSZ12JnHyBjjTD5qWB42hwEEGX@dpg-cjqjvithe99c73dddd3g-a.oregon-postgres.render.com/englishsmartsys"
+DATABASE_URL="postgres://smartsysdb_user:cWRhqWFvffWKyiHWY2uCCf7c8lGv4kV4@dpg-cmqb6og21fec739l0af0-a.oregon-postgres.render.com/smartsysdb"
